src/shop_page/css/shopStyle.css
/* ... */
.product.large{
	width:639px;
	margin-bottom:25px;
	overflow:hidden;
	-webkit-transition: all 500ms ease-in-out;
	   -moz-transition: all 500ms ease-in-out;
		-ms-transition: all 500ms ease-in-out;
		 -o-transition: all 500ms ease-in-out;
 		    transition: all 500ms ease-in-out;
}




/* ---------------- */
.floating-image-large{
	position:absolute;
	top:0;
	left:0;
	width:100%;
}
.info-large{
	  display:none;
	  position: absolute;
	  top: 0;
	  left: 0px;
	  padding: 42px;
	  width: 245px;
	  height: 395px;
	  -webkit-transition: all 500ms ease-out;
	   -moz-transition: all 300ms ease-out;
		-ms-transition: all 300ms ease-out;
		 -o-transition: all 300ms ease-out;
 		    transition: all 300ms ease-out;
}
.large .info-large{
	left: 310px;
	-webkit-transition: all 300ms ease-out;
	   -moz-transition: all 300ms ease-out;
		-ms-transition: all 300ms ease-out;
		 -o-transition: all 300ms ease-out;
 		    transition: all 300ms ease-out;
}

.info-large h4{
	text-transform:uppercase;
	font-size:28px;
	color:#000;
	font-weight:400;
	padding:0;
}
div.sku{
	  font-weight: 700;
	  color: #d0d0d0;
	  font-size: 12px;
	  padding-top: 11px;
}
div.sku strong{
	color:#000;
}
.price-big{
	font-size: 34px;
    font-weight: 600;
    color: rgba(50, 61, 26, 0.66);
    margin-top: 21px;
}
.price-big span{
	color:#d0d0d0;
	font-weight:400;
	text-decoration:line-through;
}

.add-cart-large{
	  border: 3px solid #000;
	  font-size: 17px;
	  background: #fff;
	  text-transform: uppercase;
	  font-weight: 700;
	  padding: 10px;
	  font-family: "Open Sans", sans-serif;
	  width: 246px;
	  margin-top: 38px;	
	  -webkit-transition: all 200ms ease-out;
	   -moz-transition: all 200ms ease-out;
		-ms-transition: all 200ms ease-out;
		 -o-transition: all 200ms ease-out;
 		    transition: all 200ms ease-out;
}
.add-cart-large:hover{
	color: rgba(50, 61, 26, 0.66);
	border-color:rgba(50, 61, 26, 0.66)2;
	-webkit-transition: all 200ms ease-out;
	   -moz-transition: all 200ms ease-out;
		-ms-transition: all 200ms ease-out;
		 -o-transition: all 200ms ease-out;
 		    transition: all 200ms ease-out;
			cursor:pointer;
}
.info-large h3{
    letter-spacing: 1px;
    color: #262626;
    text-transform: uppercase;
    font-size: 14px;
	clear:left;
	margin-top:20px;
    font-weight: 700;
	margin-bottom:3px;
}


.colors-large{
	margin-bottom:38px;
}
.colors-large li{
	float:left;
	list-style:none;
	margin-right:7px;
	width:16px;
	height:16px;
}
.colors-large li a{
	float:left;
	width:16px;
	height:16px;
	border-radius:50%;
}
.colors-large li a:hover{
	width:19px;
	height:19px;
	position:relative;
	top:-1px;
	left:-1px;
}

.sizes-large{
}
.sizes-large span{
	font-weight:600;
	color:#b0b0b0;
}
.sizes-large span:hover{color:#000;cursor:pointer;}

.product.large:hover{
	box-shadow:0px 5px 31px -1px rgba(0, 0, 0, 0.15);	
}
.credit{
    background: #fff;
    padding: 12px;
    font-size: 9pt;
    text-align: center;
    color: #333;
    margin-top: 40px;

}
.credit span:before{
   font-family: FontAwesome;
   color: #e41b17;
   content: "\f004";


}
.credit a{
   color: #333;
   text-decoration: none;
}

.credit a:hover:after{
    font-family: FontAwesome;
    content: "\f08e";
    font-size: 9pt;
    position: absolute;
    margin: 3px;
}

.nav {
    position: fixed;
    bottom: 0;
    width: 100%;
    height: 55px;
    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
    background-color: #ffffff;
    display: flex;
    overflow-x: auto;
}

.nav__link {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    flex-grow: 1;
    min-width: 50px;
    overflow: hidden;
    white-space: nowrap;
    font-family: sans-serif;
    font-size: 13px;
    color: #444444;
    text-decoration: none;
    -webkit-tap-highlight-color: transparent;
    transition: background-color 0.1s ease-in-out;
}

.nav__link:hover {
    background-color: #eeeeee;
}

.nav__link--active {
    color: #009578;
}

.nav__icon {
    font-size: 18px;
}

